x/programs/rust/sdk-macros/tests/ui/fail/receiver.stderr
error: The first paramter of a function with the `#[public]` attribute must be of type `wasmlanche_sdk::Context`
 --> tests/ui/fail/receiver.rs:7:17
  |
7 |     pub fn test(&self) {}
  |                 ^
